fixed the out of bound grid error and added the function of changing grid size without reload

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-body {
-    background-color: blanchedalmond;
-}
+
 .header {
     display: flex;
     margin: 15px;
@@ -34,13 +32,13 @@ button {
 }
 .gridBox{
     display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.grid {
-    display: flex;
-    background-color: antiquewhite;
-    width: 960px;
-    height: 960px;
-    margin: 20px;
+    height: 500px;
+    width: 500px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-width: 1px;
+    border-color: aquamarine;
+    /* flex-wrap: wrap; */
 }
